# RegionOfInterest

./: .gitignore  CMakeLists.txt  README.md  Render.cxx  Render.h  gui.cxx  gui.h  gui.ui  openfile.cxx  openfile.h  openfile.ui
benchmark/: CMakeLists.txt  benchmark.cxx
benchmark/times/: n_octree.txt  n_octree_1.txt  n_octree_10.txt  n_octree_10_1.txt  n_octree_10_2.txt  n_octree_2.txt  n_octree_20.txt  n_octree_20_2.txt  n_octree_4.txt  n_octree_4_1.txt  n_octree_4_2.txt  n_octree_4_3.txt  y_octree.txt  y_octree_1.txt  y_octree_10.txt  y_octree_10_1.txt  y_octree_10_2.txt  y_octree_15.txt  y_octree_2.txt  y_octree_20.txt  y_octree_20_2.txt  y_octree_3.txt  y_octree_4.txt  y_octree_4_1.txt  y_octree_4_2.txt  y_octree_4_3.txt  y_octree_n1.txt  y_octree_n10.txt  y_octree_n10_2.txt  y_octree_n20.txt  y_octree_n20_2.txt  y_octree_n3.txt  y_octree_n4.txt  y_octree_n4_1.txt  y_octree_n4_2.txt  y_octree_pa10.txt
docs/: desarrollo.md
include/: Render.h  gui.h  openfile.h
src/: Render.cxx  gui.cxx  gui.ui  main.cxx  openfile.cxx
